add different redirect types in backend